@@ -1,20 +1,20 @@
-<h1>Why switch to LilyPond?</h1>
+<h1>Waarom overstappen op LilyPond?</h1>
 
 <h2>
-  &ldquo;...  results can be stunning&rdquo; -
+  &ldquo;...  resultaten kunnen verbluffend zijn&rdquo; -
   <a href="http://www.computermusic.co.uk">Computer Music Special</a>.
 </h2>
 
 <img src="@IMAGES@lilypond-book.png" align="right">
 
 <dl>
-  <dt>Text-based input</dt>
+  <dt>Tekstgebasserde invoer</dt>
   <dd>
-    LilyPond takes ASCII input, which you can produce in <em>your</em>
-    favorite environment, quickly and comfortably.  No more futzing with
-    the mouse.  The input contains all the information, so there is no
-    need to remember complex command sequences.  Simply save an input for
-    later reference.
+    LilyPond werkt met ASCII invoer, die je kunt produceren in
+    <em>jouw</em> favoriete omgeving, snel en comfortabel.  Geen
+    geschuifel meer met de muis.  De invoer bevat alle informatie, dus
+    er is geen noodzaak ingewikkelde reeksen commando's te onthouden.
+    Je bewaart eenvoudigweg je beschrijving voor hergebruik.
   </dd>
 
   <dt>Mix music and text</dt>
