@@ -40,7 +40,7 @@
     Nieuwsgierig?  Doe een <a href="tour.html">kort rondje LilyPond</a>,
     of duik de <a href="howto.html">stoomcursus</a> in.
   <li>
-    Vragen?  Kijk eens naar de<a href="../about/faq.html">Veel
+    Vragen?  Kijk eens naar de <a href="../about/faq.html">Veel
     Gestelde Vragen (FAQ)</a>.
   <li>
     <a href="../download">Download</a> het direkt.
