@@ -1,5 +1,7 @@
 2005-01-28  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* site/switch/advantages.html: HTML fixes.
+
 	* scripts/format-page.py (grab_gettext): Strip .html from [most]
 	local urls.
 
